--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -768,7 +768,7 @@ live_config_reload: true
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-# key_bindings:
+key_bindings:
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
@@ -779,11 +779,12 @@ live_config_reload: true
   #- { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
 
   # Vi Mode
-  # - { key: Space,  mods: Control, mode: ~Search,    action: ToggleViMode            }
+  - { key: K, mods: Control, action: ToggleViMode }
   # - { key: Space,  mods: Control, mode: Vi|~Search, action: ScrollToBottom          }
   #- { key: Escape,                      mode: Vi|~Search, action: ClearSelection          }
   #- { key: I,                           mode: Vi|~Search, action: ToggleViMode            }
-  #- { key: I,                           mode: Vi|~Search, action: ScrollToBottom          }
+  - { key: I, mods: Shift, mode: Vi|~Search, mode: Vi|~Search, action: First }
+  - { key: A, mods: Shift, mode: Vi|~Search, action: Last }
   #- { key: C,      mods: Control,       mode: Vi|~Search, action: ToggleViMode            }
   #- { key: Y,      mods: Control,       mode: Vi|~Search, action: ScrollLineUp            }
   #- { key: E,      mods: Control,       mode: Vi|~Search, action: ScrollLineDown          }
