keep default mapping for vi mode

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -779,7 +779,7 @@ key_bindings:
   #- { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
 
   # Vi Mode
-  - { key: K, mods: Control, action: ToggleViMode }
+  - { key: Space, mods: Control|Shift, action: ToggleViMode }
   # - { key: Space,  mods: Control, mode: Vi|~Search, action: ScrollToBottom          }
   #- { key: Escape,                      mode: Vi|~Search, action: ClearSelection          }
   #- { key: I,                           mode: Vi|~Search, action: ToggleViMode            }
