--- a/.ideavimrc
+++ b/.ideavimrc
@@ -61,6 +61,9 @@ let mapleader = " "
 :map <leader>gc <Action>(Git.CompareWithBranch)
 :map <leader>gg <Action>(Git.Branches)
 :map <leader>lf <Action>(ReformatCode)
+:map <leader>li <Action>(OptimizeImports)
+:map <leader>r <Action>(ChooseRunConfiguration)
+
 
 inoremap jk <Esc>
 inoremap kj <Esc>
