--- a/.ideavimrc
+++ b/.ideavimrc
@@ -22,7 +22,11 @@ Plug 'terryma/vim-multiple-cursors'
 set multiple-cursors
 
 nmap <C-n> <Plug>NextWholeOccurrence
+xmap <C-n> <Plug>NextWholeOccurrence
+omap <C-n> <Plug>NextWholeOccurrence
 nmap g<C-n> <Plug>NextOccurrence
+xmap g<C-n> <Plug>NextOccurrence
+omap g<C-n> <Plug>NextOccurrence
 xmap <C-x> <Plug>SkipOccurrence
 xmap <C-p> <Plug>RemoveOccurrence
 
@@ -30,6 +34,10 @@ xmap <C-p> <Plug>RemoveOccurrence
 " <A-n> is used to enter accented text, e.g., ñ
 
 nmap <S-C-n> <Plug>AllWholeOccurrences
+xmap <S-C-n> <Plug>AllWholeOccurrences
+omap <S-C-n> <Plug>AllWholeOccurrences
+nmap g<S-C-n> <Plug>AllOccurrences
+xmap g<S-C-n> <Plug>AllOccurrences
 omap g<S-C-n> <Plug>AllOccurrences
 
 " set <leader> to <space>
