--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -3,28 +3,15 @@ live_config_reload = true
 [cursor]
 vi_mode_style = "Block"
 
-[env]
-TERM = "alacritty"
-
 [font]
 size = 14.0
 
 [font.normal]
 family = "JetBrainsMono Nerd Font"
 
-[[keyboard.bindings]]
-action = "ToggleViMode"
-key = "Space"
-mods = "Control"
-
-[[keyboard.bindings]]
-action = "First"
-key = "I"
-mode = "Vi|~Search"
-mods = "Shift"
-
-[[keyboard.bindings]]
-action = "Last"
-key = "A"
-mode = "Vi|~Search"
-mods = "Shift"
+[keyboard]
+bindings = [
+  { key = "Space", mods = "Shift",                      action = "ToggleViMode" },
+  { key = "I",     mods = "Shift", mode = "Vi|~Search", action = "First" },
+  { key = "A",     mods = "Shift", mode = "Vi|~Search", action = "Last" }
+]
