--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [cursor]
 vi_mode_style = "Block"
@@ -15,3 +14,6 @@ bindings = [
   { key = "I",     mods = "Shift", mode = "Vi|~Search", action = "First" },
   { key = "A",     mods = "Shift", mode = "Vi|~Search", action = "Last" }
 ]
+
+[general]
+live_config_reload = true
